# pyinferno

./: .gitignore  Cargo.toml  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: CI.yml  Release.yml  release.yml
pyinferno/: __init__.py  cli.py  converter.py  flameprof.py  profiler.py  pyinferno.pyi  pytest_flamegraphs.py  renderer.py
src/: lib.rs
testdata/02_convert_stats_to_lines/: output.prof
tests/: test_pyinferno.py  test_pytest_plugin.py
