[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "pyinferno"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: Pytest",
]

[project.entry-points.pytest11]
flamegraphs = "pyinferno.pytest_flamegraphs"
